@@ -1,5 +1,6 @@
 Revision history for Module::Provision                           .
 
+          - Refactored smoker exceptions to dump file
           - Smarter changelog parsing in git hook
             Will not include this line
           - Fewer test dependencies in boilerplate
